--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "run_01-2": "ts-node ./day_1/puzzle2.ts",
     "run_02-1": "ts-node ./day_2/puzzle1.ts",
     "run_02-2": "ts-node ./day_2/puzzle2.ts",
-    "run_03-1": "ts-node ./day_3/puzzle1.ts"
+    "run_03-1": "ts-node ./day_3/puzzle1.ts",
+    "run_03-2": "ts-node ./day_3/puzzle2.ts"
   },
   "volta": {
     "node": "16.16.0"
