--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "run_03-1": "ts-node ./day_3/puzzle1.ts",
     "run_03-2": "ts-node ./day_3/puzzle2.ts",
     "run_04-1": "ts-node ./day_4/puzzle1.ts",
-    "run_04-2": "ts-node ./day_4/puzzle2.ts"
+    "run_04-2": "ts-node ./day_4/puzzle2.ts",
+    "run_05-1": "ts-node ./day_5/puzzle1.ts"
   },
   "volta": {
     "node": "16.16.0"
