--- a/2025/package.json
+++ b/2025/package.json
@@ -4,7 +4,8 @@
   "description": "Advent Of Code 2025",
   "main": "index.js",
   "scripts": {
-    "d01-1": "ts-node d01/solver.p1.ts"
+    "d01-1": "ts-node d01/solver.p1.ts",
+    "d01-2": "ts-node d01/solver.p2.ts"
   },
   "repository": {
     "type": "git",
