--- a/2025/package.json
+++ b/2025/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "d01-1": "ts-node d01/solver.p1.ts",
-    "d01-2": "ts-node d01/solver.p2.ts"
+    "d01-2": "ts-node d01/solver.p2.ts",
+    "d02-1": "ts-node d02/solver.p1.ts"
   },
   "repository": {
     "type": "git",
