--- a/2025/package.json
+++ b/2025/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "d01-1": "ts-node d01/solver.p1.ts",
     "d01-2": "ts-node d01/solver.p2.ts",
-    "d02-1": "ts-node d02/solver.p1.ts"
+    "d02-1": "ts-node d02/solver.p1.ts",
+    "d02-2": "ts-node d02/solver.p2.ts"
   },
   "repository": {
     "type": "git",
